name:                hoist-error
version:             0.2.0.0
synopsis:            Some convenience facilities for hoisting errors into a monad
license:             MIT
license-file:        LICENSE
author:              Jon Sterling
maintainer:          jon@jonmsterling.com
copyright:           Copyright (c) 2014 AlephCloud, Inc
category:            Control
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type: git
    location: https://github.com/alephcloud/hs-hoist-error.git

Tested-With:         GHC == 7.6.3
                   , GHC == 7.8.4
                   , GHC == 7.10.3
                   , GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.1
library
  exposed-modules:     Control.Monad.Error.Hoist
  build-depends:       base >=4.7 && <4.12
                     , mtl > 2.2 && < 2.3
                     , either
  hs-source-dirs:      src
  default-language:    Haskell2010
